[gd_scene load_steps=9 format=3 uid="uid://crp780ib7oqmq"]

[ext_resource type="Script" path="res://slots_menu.gd" id="1_dxni7"]
[ext_resource type="Texture2D" uid="uid://df8agdm7et1go" path="res://Assets/random_photos/Slots_background.jpg" id="2_mv87s"]
[ext_resource type="Texture2D" uid="uid://dnr2djerda2wx" path="res://Assets/Packs/Top-Down/Chips/gamedevchips(rgb)LargeOutline/RedChipLargeOutline.png" id="3_44qyf"]
[ext_resource type="Texture2D" uid="uid://b1kncbvfybx8c" path="res://Assets/Packs/Top-Down/Chips/gamedevchips(rgb)LargeOutline/BlueChipLargeOutline.png" id="4_ejykk"]
[ext_resource type="Texture2D" uid="uid://bauu7mw4t452n" path="res://Assets/Packs/Top-Down/Chips/gamedevchips(rgb)LargeOutline/GreenChipLargeOutline.png" id="5_x06th"]
[ext_resource type="PackedScene" uid="uid://bjpcdxp8og41e" path="res://Scenes/bet_stack_coin.tscn" id="6_54d0m"]
[ext_resource type="AudioStream" uid="uid://d25h2f3i2bdqs" path="res://Audio/cha ching sound effect download.wav" id="7_ktaqx"]

[sub_resource type="FontFile" id="FontFile_r2x5s"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/91/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/91/0/ascent = 0.0
cache/0/91/0/descent = 0.0
cache/0/91/0/underline_position = 0.0
cache/0/91/0/underline_thickness = 0.0
cache/0/91/0/scale = 1.0
cache/0/91/0/kerning_overrides/91/0 = Vector2(0, 0)
cache/0/91/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/91/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/91/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/30/0/kerning_overrides/91/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/20/0/kerning_overrides/91/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/20/0 = Vector2(0, 0)

[node name="Slots_menu" type="Node2D"]
script = ExtResource("1_dxni7")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.517647)
position = Vector2(578, 325.5)
scale = Vector2(1.00697, 0.772619)
texture = ExtResource("2_mv87s")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MenuPanel" type="Panel" parent="UI"]
layout_mode = 0
offset_left = 263.0
offset_top = 134.0
offset_right = 902.0
offset_bottom = 512.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MenuPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 14.0
offset_right = 526.0
offset_bottom = 278.0

[node name="5_dolar" type="Button" parent="UI/MenuPanel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontFile_r2x5s")
theme_override_font_sizes/font_size = 91
text = "$5"
icon = ExtResource("3_44qyf")
icon_alignment = 1
vertical_icon_alignment = 2

[node name="10_dollar_bet" type="Button" parent="UI/MenuPanel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontFile_r2x5s")
theme_override_font_sizes/font_size = 91
text = "$10"
icon = ExtResource("4_ejykk")
icon_alignment = 1
vertical_icon_alignment = 2

[node name="25_dollar_bet" type="Button" parent="UI/MenuPanel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontFile_r2x5s")
theme_override_font_sizes/font_size = 91
text = "$25"
icon = ExtResource("5_x06th")
icon_alignment = 1
vertical_icon_alignment = 2

[node name="Panel" type="Panel" parent="UI/MenuPanel"]
layout_mode = 0
offset_left = 122.0
offset_top = 285.0
offset_right = 518.0
offset_bottom = 366.0

[node name="SlotsGameStart" type="Button" parent="UI/MenuPanel/Panel"]
layout_mode = 2
offset_left = 39.0
offset_top = 11.0
offset_right = 164.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 40
text = "Start"

[node name="SlotsGameExit" type="Button" parent="UI/MenuPanel/Panel"]
layout_mode = 2
offset_left = 216.0
offset_top = 11.0
offset_right = 358.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 40
text = "Exit"

[node name="bet_stack_coin" parent="." instance=ExtResource("6_54d0m")]
visible = false
position = Vector2(830, 380)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(830, 380)
stream = ExtResource("7_ktaqx")

[connection signal="get_Bet" from="." to="." method="_on_get_bet"]
[connection signal="pressed" from="UI/MenuPanel/HBoxContainer/5_dolar" to="." method="_on_5_dolar_pressed"]
[connection signal="pressed" from="UI/MenuPanel/HBoxContainer/10_dollar_bet" to="." method="_on_10_dollar_bet_pressed"]
[connection signal="pressed" from="UI/MenuPanel/HBoxContainer/25_dollar_bet" to="." method="_on_25_dollar_bet_pressed"]
[connection signal="pressed" from="UI/MenuPanel/Panel/SlotsGameStart" to="." method="_on_slots_game_start_pressed"]
[connection signal="pressed" from="UI/MenuPanel/Panel/SlotsGameExit" to="." method="_on_slots_game_exit_pressed"]
